syntax = "proto3";

option csharp_namespace = "GatewayService";
import "google/protobuf/timestamp.proto";

package gateway;

service GatewayService {
	rpc AddUser (AddUserRequest) returns (AddUserReply);

	rpc StartCollectionService (StartCollectionServiceRequest) returns (StartCollectionServiceReply);
	rpc StartAnalysisService (StartAnalysisServiceRequest) returns (StartAnalysisServiceReply);

	rpc StopCollectionService (StopCollectionServiceRequest) returns (StopCollectionServiceReply);
	rpc StopAnalysisService (StopAnalysisServiceRequest) returns (StopAnalysisServiceReply);

	rpc GetComments (GetCommentsRequest) returns (GetCommentsReply);
	rpc GetEvaluatedComments (EvaluatedCommentsRequest) returns (EvaluatedCommentsReply);

	rpc GetCollectionServiceLogs (LogRequest) returns (LogReply);
	rpc GetAnalysisServiceLogs (LogRequest) returns (LogReply);

	rpc ClearCommentsDatabase (ClearCommentsDatabaseRequest) returns (ClearCommentsDatabaseReply);
	rpc ClearEvaluatedDatabase (ClearEvaluatedDatabaseRequest) returns (ClearEvaluatedDatabaseReply);

	rpc SetCollectionServiceConfiguration (SetConfigurationRequest) returns (SetConfigurationReply);
	rpc SetAnalysisServiceConfiguration (SetConfigurationRequest) returns (SetConfigurationReply);
}

message AddUserRequest{
	string UserName = 1;
	string Token = 2;
}
message AddUserReply{}

message StartCollectionServiceRequest{}
message StartCollectionServiceReply{}

message StopCollectionServiceRequest{}
message StopCollectionServiceReply{}

message GetCommentsRequest{
	CommentsQueryFilterProto Filter = 1;
}
message GetCommentsReply{
	repeated CommentDataProto CommentData = 1;
}

message LogRequest{
	google.protobuf.Timestamp LogDate = 1;
}
message LogReply{
	bytes LogFile = 1;
}

message CommentsQueryFilterProto{
	int64 PostId = 1;
	int64 GroupId = 2;
	int64 AuthorId = 3;
	google.protobuf.Timestamp FromDate = 4;
	google.protobuf.Timestamp ToDate = 5;
}

message CommentDataProto{
	int64 Id = 1;
	int64 CommentId = 2;
	int64 PostId = 3;
	int64 GroupId = 4;
	int64 AuthorId = 5;
	string Text = 6;
	google.protobuf.Timestamp PostDate = 7;
}

message ClearCommentsDatabaseRequest{}
message ClearCommentsDatabaseReply{}

message SetConfigurationRequest {
	string Settings = 1;
}
message SetConfigurationReply {}

message StartAnalysisServiceRequest{}
message StartAnalysisServiceReply{}

message StopAnalysisServiceRequest{}
message StopAnalysisServiceReply{}

message EvaluatedCommentsRequest{
	CommentsQueryFilterProto Filter = 1;
}
message EvaluatedCommentsReply{
	repeated EvaluatedCommentProto EvaluatedComments = 1;
}

message EvaluatedCommentProto{
	int32 Id = 1;
	int64 CommentId = 2;
	CommentProto Comment = 3;
	string EvaluateCategory = 4;
	double EvaluateProbability = 5;
}

message CommentProto{
	int64 Id = 1;
	int64 CommentId = 2;
	int64 PostId = 3;
	int64 GroupId = 4;
	int64 AuthorId = 5;
	string Text = 6;
	google.protobuf.Timestamp PostDate = 7;
}

message ClearEvaluatedDatabaseRequest{}
message ClearEvaluatedDatabaseReply{}